# chapel-www

./: README.md
.github/workflows/: lint-artifacts.yml
chapel-lang.org/: .htaccess  404.html  CHIUW-cft.html  CHIUW2014.html  CHIUW2015-cfp.html  CHIUW2015-hottopics.html  CHIUW2015.html  CHIUW2016-cfp.html  CHIUW2016.html  CHIUW2017-cfp.html  CHIUW2017.html  CHIUW2018-cfp.html  CHIUW2018.html  CHIUW2019-cfp.html  CHIUW2019.html  CHIUW2020-cfp.html  CHIUW2020-zoom.html  CHIUW2020.html  CHIUW2021-cfp.html  CHIUW2021.html  CHIUW2022-cfp.html  CHIUW2022.html  CHIUW2023-cfp.html  CHIUW2023.html  CHUG.html  ChapelCon.html  ChapelCon24.html  SC-BoF-LT.html  SC14-guts.html  SC14.html  SC15-guts.html  SC15.html  collaborations-archived.html  collaborations.html  community-old.html  contributing.html  contributors.html  developers.html  download-old.html  editorials.html  (+65 more)
chapel-lang.org/blog/: index.html  index.xml  sitemap.xml
chapel-lang.org/blog/posts/bns2/code/: CMakeLists.txt  nsPoisson.compopts  nsPoisson.cpp  nsPoisson.good  nsPoisson.h  nsPoisson.py  nsPoisson_numba.py  utils.cpp  utils.h
chapel-lang.org/blog/posts/bns4/code/: CMakeLists.txt  FlowPlot.chpl  flowPlot.py  nsStep11.chpl  nsStep11.cpp  nsStep11.good  nsStep11.h  nsStep11.prediff  nsStep11.suppressif  utils.cpp  utils.h
chapel-lang.org/code/: MatMulCpu.chpl  MatMulCuda.cpp  MatMulOpencl.cpp
chapel-lang.org/community/: index.html
chapel-lang.org/css/: owl.carousel.css  roboto.css
src/: .gitignore  Makefile  README.md  config.toml  lint_artifacts.py  process_rss.py  requirements.txt
(+7695 files in other folders)
